@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Remove a number of node:getEdges() and edge:getNodes() occurrences.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Rework edge TikZ code generation. Add table.map().
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
